# IISc-campus-WDN

./: .gitignore  =2.2.0  Classification_model_Two_inlet.ipynb  README.md  main.py  main_PCA_GP.py  main_WAE.py  main_WAE_old.py  main_epanet.py  main_supervised.py  main_supervised_parallel.py  main_unsupervised.py  main_unsupervised_parallel.py  network.eps  prerna_code.ipynb  pyproject.toml  temp.inp  temp.rpt
.github/workflows/: CI.yml
data/: IISc_epanet.inp
data/raw_data/: ~$no_leak.xlsx
epanet_input_files/: IISc_Epanet_Net.inp  IISc_Epanet_Revised281123.inp  IISc_Epanet_Revised31.net  IISc_campus.inp  IISc_campus_demand.inp
graph_gaussian/examples/: regression_py
notebooks/: Classification_model_Two_inlet.ipynb  Datagen_Two_inlet.ipynb  active_hours.ipynb  data_exploration.ipynb  explore_data.ipynb  preprocess_data.ipynb  reconstruction_anomaly_detection.ipynb  supervised.ipynb  unsupervised.ipynb
old_code/: bas_noise.py  main_GP_on_graph.py  main_PCA_GP.py  main_epanet.py  plot_network.py
old_code/graph_gaussian/examples/utils/: preprocessing.py
old_code/notebooks/: Datagen_Two_inlet copy.ipynb  supervised.ipynb
src/ML_for_WDN/: NN_utils.py  WAE.py  __init__.py  campus_dataset.py  data_utils.py  models.py  preprocess_utils.py  prerna_model.py  test_utils.py  train_utils.py
src/ML_for_WDN/models/: WAE.py
src/ML_for_WDN/tasks/: changepoint_detection.py  preprocess_data.py
tests/: test_main.py
